--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-site",
+  "homepage": "https://eks1985.github.io/my-site",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
